# hydro

./: .gitignore  AUTOMINE_DEBUG_GUIDE.md  AUTOMINE_IMPROVEMENTS.md  BUGFIX_AUTOMINE_STOPS_MINING.md  BUGFIX_CIRCLING.md  BUGFIX_COLLECTABLE_ON_SOLID_BLOCK.md  BUGFIX_COLLECTION_STUCK.md  BUGFIX_DEADEND_PATH_BLOCKING.md  BUGFIX_MINING_DISTANCE.md  BUTTON_STYLING_UPDATE.md  CHANGELOG.md  CHANGELOG_DEADEND_MARKING.md  Cargo.toml  Dockerfile  FEATURE_FOCUS_TARGET.md  FEATURE_SHORTCUT_MINING.md  HYDRO_IMPLEMENTATION_COMPLETE.md  HYDRO_UI_CHANGES.md  LOGIC_MATCH_LUA.md  LUA.md  MIGRATION_SUMMARY.md  QUICK_START.md  README.md  REMOVAL_CIRCLING_DETECTION.md  SHORTCUT_MINING_SUMMARY.md  SIDEBAR_CLEANUP.md  SIDEBAR_ICON_FIX.md  aphidz_strings.txt  automine.lua  block_types.json  docker-compose.yml  lua_types.lua  packet-mobile.js  packet-pc.js  update_config_example.json  world_objects.txt
.github/workflows/: release.yml
GameAssembly_il2cppdump_20260430_1135/: stringliteral.json
GameAssembly_il2cppdump_20260430_1135/DummyDll/: __Generated
src/: dashboard_auth.rs  main.rs  models.rs  updater.rs
src/auth/: mod.rs
src/constants/: block_type.rs  fishing.rs  mod.rs  movement.rs  network.rs  protocol.rs  timing.rs  tutorial.rs
src/logging/: mod.rs
src/lua_runtime/: mod.rs
src/net/: mod.rs
src/pathfinding/: astar.rs
src/protocol/: mod.rs
src/session/: autoclear.rs  automine.rs  autonether.rs  bot_session.rs  fishing.rs  manager.rs  mod.rs  movement.rs  network.rs  state.rs  tutorial.rs  world_data.rs
src/web/: mod.rs
src/world/: mod.rs
web/: closed_divs.txt  index.html  open_divs.txt  package.json  tsconfig.app.json  vite.config.ts  world_objects.txt
web/public/tiles/: atlas.json
web/src/: App.tsx  App.tsx.backup  index.css
(+7 files in other folders)
